k8s/base/workloads/bff/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-service
  labels:
    app: bff-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff-service
  template:
    metadata:
      labels:
        app: bff-service
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: bff-service
      containers:
      - name: bff-service
        image: bff-service:latest
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
